--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-loader": "^4.0.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "svg-inline-loader": "^0.8.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
